bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: value and is not a member of Boolean
  if (talking and hour<7 or talking and hour>20) {
              ^