bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (talking and hour<7 or talking and hour>20) {
    return true
  } else {
    return false
  }
}